# smart-hr

./: .dockerignore  .env.example  .gitignore  01_schema.sql  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  prompts.yaml  pyproject.toml
backend/alembic/: env.py
backend/src/: main.py  seed.py  seed_rag.py
backend/src/core/: config.py  database.py  prompt_manager.py
backend/src/models/: llm_schemas.py  schema.py
backend/src/routers/: analytics.py  employees.py  goals.py
backend/src/schemas/: api.py
backend/src/services/: goal_generator.py  rag_service.py  smart_evaluator.py
chroma_data/: chroma.sqlite3
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  UserContext.jsx  api.js  constants.js  index.css
frontend/src/components/: Dashboard.jsx  GoalCard.jsx  GoalSuggestions.jsx  OnboardingTour.jsx  SmartScoreCard.jsx  UserPicker.jsx  shared.jsx
frontend/src/views/: EmployeeView.jsx  ManagerView.jsx  MyGoalsView.jsx
src/core/: config.py  prompt_manager.py
src/models/: schema.py
src/routers/: analytics.py
src/schemas/: api.py
src/services/: goal_generator.py  smart_evaluator.py
