[project]
name = "hr-ai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "langchain-text-splitters>=1.1.1",
    "langfuse>=2.51.0",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
